# smart-rename

./: .gitignore  README.md  pyproject.toml
src/smart_rename/: __init__.py  cli.py  media_renamer.py  pdf_renamer.py  utils.py
